New design + JS

--- a/about.html
+++ b/about.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/about.css">
     <title>*_About</title>
 </head>
@@ -15,7 +21,7 @@
                 <p class="contact-info">+34 639 44 04 66</p>
             </div>
             <div class="dropdown">
-                <img class="dropbtn" src="./img/puntos_menu.svg" />
+                <span class="dropbtn">Menu</span>
                 <div class="dropdown-content">
                     <a href="./index.html">Home</a>
                     <a href="./statics.html">1_Statics</a>
@@ -26,9 +32,8 @@
             </div>
         </div>
     </nav>
-    <main>
+    <main class="main">
         <section class="section-1">
-            <div class="background"></div>
             <h1 class="title">*_About</h1>
                 <div class="container">
                     <div class="block-1">
@@ -39,9 +44,9 @@
                             <p class="paragraph">Since this is not my only area of interest, I am currently taking a front-end development bootcamp that will help prepare myself for bigger projects and more complicated scenarios.</p>
                         </div>
                         <div class="social-networks">
-                            <a href="https://twitter.com/anabelruizaire"><img src="./img/twitter_Mesa de trabajo 1.svg" alt="Twitter"></a>
-                            <a href="https://www.instagram.com/anadelarue98/?igsh=MWdvbm9jaDBtYTlpOQ%3D%3D"><img src="./img/instagram_Mesa de trabajo 1 copia.svg" alt="Instagram"></a>
-                            <a href="https://www.linkedin.com/in/ana-ruiz-espinar-171721197/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="./img/linkedin_Mesa de trabajo 1 copia 2.svg" alt="Linkedin"></a>
+                            <a class="social-networks--link" href="https://twitter.com/anabelruizaire"><img class="social-networks--img" src="./img/twitter_Mesa de trabajo 1.svg" alt="Twitter"></a>
+                            <a class="social-networks--link" href="https://www.instagram.com/anadelarue98/?igsh=MWdvbm9jaDBtYTlpOQ%3D%3D"><img class="social-networks--img" src="./img/instagram_Mesa de trabajo 1 copia.svg" alt="Instagram"></a>
+                            <a class="social-networks--link" href="https://www.linkedin.com/in/ana-ruiz-espinar-171721197/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img class="social-networks--img" src="./img/linkedin_Mesa de trabajo 1 copia 2.svg" alt="Linkedin"></a>
                         </div>
                     </div>
                 </div>
