--- a/others.html
+++ b/others.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/others.css">
     <title>3_Others</title>
 </head>
@@ -15,7 +21,7 @@
                 <p class="contact-info">+34 639 44 04 66</p>
             </div>
             <div class="dropdown">
-                <img class="dropbtn" src="./img/puntos_menu.svg" />
+                <span class="dropbtn">Menu</span>
                 <div class="dropdown-content">
                     <a href="./index.html">Home</a>
                     <a href="./statics.html">1_Statics</a>
@@ -27,82 +33,72 @@
         </div>
     </nav>
     <main>
-        <section class="section-1">
-            <div class="background"></div>
-            <h1 class="title">3_Others</h1>
-                <div class="container">
-                    <div class="block-1">
-                        <h2 class="article-name">Cómo han cambiado los números 1 en España desde 1980</h2>
-                        <h2 class="article-name-og">How nº1 hits have changed in Spain since 1980</h2>
-                        <div class="text">
-                            <p class="paragraph">This is the biggest project I have been involved in since I arrived at the paper and we started it just a month after I started there. For this piece, in which so many talented many have worked, I had the chance to extract all the data and analyse it.</p>
-                            <p class="paragraph">We worked with one the Spotify API endpoints that returns numeric information of all songs, including how cheerful or energetic or danceable they are. We applied this to all number one hits Spain has add since 1980 and got the ‘median song’ of every decade. This means the song whose values from the API were closest to the median values of every decade.</p>
-                            <p class="paragraph">All things aesthetic-related issues in this piece were created by our design team and were later developed by the paper’s developers.</p>
+        <section class="section">
+            <div class="section-block" id="spotify">
+                <div class="img_wrap"><img class="section-img" src="./img/otros_spotify/1.jpg" alt=""></div>
+                <div class="section-wrap">
+                    <h2 class="article-name">How nº1 hits have changed in Spain since 1980</h2>
+                    <h2 class="article-name-og">Cómo han cambiado los números 1 en España desde 1980</h2>
+                    <p class="paragraph">This is the biggest project I have been involved in since I arrived at the paper and we started it just a month after I started there. For this piece, in which so many talented many have worked, I had the chance to extract all the data and analyse it.</p>
+                    <div class="links--section">
+                        <div class="links--section--links">
+                            <a class="link-text" href="https://www.elconfidencial.com/economia/2024-01-11/mapa-eficiencia-energetica-calefaccion-edificio-rehabilitacion_3796426/" target="_blank">Link</a>
+                            <button class="tools-text js__toolsText">Tools used</button>
                         </div>
-                        <span class="link"><a href="https://www.elconfidencial.com/cultura/2023-11-21/numeros-uno-espana-desde-1980-hasta-actualidad_3774320/">link</a></span>
+                        <p class="toolsBox js__toolsBox">All data was extracted through the Spotify API in Python with requests and cleaned with Pandas. The design was created in Figma by my colleagues and was also developed by them with HTML, CSS and JS. Some graphics were made with D3.</p>
                     </div>
-                    <div class="block-2">
-                        <img src="./img/otros_spotify/1.PNG" alt="">
-                        <img src="./img/otros_spotify/2.PNG" alt="">
-                    </div>
-                </div>
-        </section>
-        <section class="section-2">
-            <div class="background"></div>
-            <div class="container">
-                <div class="block-1">
-                    <h2 class="article-name">El mapa de la inmigración, barrio a barrio: ¿es España un país segregado?</h2>
-                    <h2 class="article-name-og">The map of inmigration by neighbourhood: Is Spain a segregated country?</h2>
-                    <div class="text">
-                        <p class="paragraph">We made this article with information from the census published at the end of 2022. A colleague of ours from the paper told us if we could see if Spain was a segregated country or if the immigrant population was more or less integrated with the natives.</p>
-                        <p class="paragraph">We had pretty clear what the map had to look like and the information included in it was easily analysed and painted. The problem came with all matches we wanted to do of this data with other variables, such as the income or the what people in this areas had voted in past elections.</p>
-                        <p class="paragraph">All things aesthetic-related issues in this piece were created by our design team and were later developed by the paper’s developers.</p>
-                    </div>
-                    <span class="link"><a href="https://www.elconfidencial.com/espana/2023-02-05/el-mapa-de-la-inmigracion-barrio-a-barrio-es-espana-un-pais-segregado_3568992/">link</a></span>
-                </div>
-                <div class="block-3">
-                    <img src="./img/otros_segregacion/2.PNG" alt="">
-                    <img src="./img/otros_segregacion/1.PNG" alt="">
                 </div>
             </div>
-        </section>
-        <section class="section-1">
-            <div class="background"></div>
-            <div class="container">
-                <div class="block-1">
-                    <h2 class="article-name">Los resultados de las elecciones generales en España, calle a calle</h2>
-                    <h2 class="article-name-og">The results of Spain's general elections: street by street</h2>
-                    <div class="text">
-                        <p class="paragraph">Although this map is not the only elections-related thing that we do at the paper, it is a common denominator to all of them and a good example of how fast we need to work those days.</p>
-                        <p class="paragraph">The map displays the most voted parties in each unit represented, as well as the most voted political blocks and the votes that the main parties received that night. Most times, we have to request this information to some administrative organ that hands it to ourselves when they want to. We have to work efficiently to make sure that we are the firsts ones to publish such information. This not only applies to the map, it is only a small example of how we work at the paper at elections nights.</p>
+
+            <div class="section-block reverse">
+                <div class="img_wrap"><img class="section-img" src="./img/otros_segregacion/1.jpg" alt=""></div>
+                <div class="section-wrap">
+                    <h2 class="article-name">The map of inmigration by neighbourhood: Is Spain a segregated country?</h2>
+                    <h2 class="article-name-og">El mapa de la inmigración, barrio a barrio: ¿es España un país segregado?</h2>
+                    <p class="paragraph">We made this article with information from the census published at the end of 2022. A colleague of ours from the paper told us if we could see if Spain was a segregated country or if the immigrant population was more or less integrated with the natives.</p>
+                    <div class="links--section">
+                        <div class="links--section--links">
+                            <a class="link-text" href="https://www.elconfidencial.com/economia/2024-01-11/mapa-eficiencia-energetica-calefaccion-edificio-rehabilitacion_3796426/" target="_blank">Link</a>
+                            <button class="tools-text js__toolsText">Tools used</button>
+                        </div>
+                        <p class="toolsBox js__toolsBox">All data was cleaned with Pandas. My colleagues designed the project in Figma and they also developed it, the Mapbox map included.</p>
                     </div>
-                    <span class="link"><a href="https://www.elconfidencial.com/espana/elecciones-generales/2023-07-24/los-resultados-de-las-elecciones-generales-en-toda-espana-calle-a-calle_3705729/">link</a></span>
-                </div>
-                <div class="block-2">
-                    <img src="./img/otros_elecciones/1.PNG" alt="">
-                    <img src="./img/otros_elecciones/2.PNG" alt="">
                 </div>
             </div>
-        </section>
-        <section class="section-2">
-            <div class="background"></div>
-            <div class="container">
-                <div class="block-1">
-                    <h2 class="article-name">Crónica de unos cuernos anunciados: el lenguaje de 'La isla de las tentaciones' delata a los infieles</h2>
-                    <h2 class="article-name-og">Chronicle of an Infidelity Foretold: how the language of 'Temptation Island' betrays the cheaters</h2>
-                    <div class="text">
-                        <p class="paragraph">Most times, data and visualization are used to display information that is important for the public eye. Some other times, we use it to have fun and delight ourselves a tiny bit. This is what this article is about, and also kind of a bet between colleagues.</p>
-                        <p class="paragraph">In this article, we were trying to prove that the contestants of the Spanish reality-show “Temptation Island” could betray themselves with their language when still they had not cheated on their partners, but were going to. For this, we used the subtitles of the four first episodes of all seasons and extracted the key words. Later, we analysed the sentences those words were linked to and tried to only keep those in which the possible cheater talked about his personal experiences in the villa.</p>
-                        <p class="paragraph">The graphics were made in Figma with help from the design team.</p>
+
+            <div class="section-block">
+                <div class="img_wrap"><img class="section-img" src="./img/otros_elecciones/1.jpg" alt=""></div>
+                <div class="section-wrap">
+                    <h2 class="article-name">The results of Spain's general elections: street by street</h2>
+                    <h2 class="article-name-og">Los resultados de las elecciones generales en España, calle a calle</h2>
+                    <p class="paragraph">Although this map is not the only elections-related thing that we do at the paper, it is a common denominator to all of them and a good example of how fast we need to work those days.</p>
+                    <div class="links--section">
+                        <div class="links--section--links">
+                            <a class="link-text" href="https://www.elconfidencial.com/economia/2024-01-11/mapa-eficiencia-energetica-calefaccion-edificio-rehabilitacion_3796426/" target="_blank">Link</a>
+                        </div>
                     </div>
-                    <span class="link"><a href="https://www.elconfidencial.com/television/programas-tv/2024-03-15/isla-tentaciones-infidelidad-lenguaje-cuernos_3848863/">link</a></span>
-                </div>
-                <div class="block-3">
-                    <img src="./img/otros_isla/1.PNG" alt="">
-                    <img src="./img/otros_isla/2.PNG" alt="">
                 </div>
             </div>
+
+            <div class="section-block reverse" id="taylor">
+                <div class="img_wrap"><img class="section-img" src="./img/otros_taylor/1.JPG" alt=""></div>
+                <div class="section-wrap">
+                    <h2 class="article-name">Why can't you sing any song from the most streamed artist in the world</h2>
+                    <h2 class="article-name-og">Por qué no puedes cantar ninguna canción de la artista más escuchada del mundo</h2>
+                    <p class="paragraph">We wrote this piece when Taylor had her concert in Madrid. We could not understand why her music was so popular among her fans, but it was so difficult for any other people to retain her lyrics in their brains.</p>
+                    <div class="links--section">
+                        <div class="links--section--links">
+                            <a class="link-text" href="https://www.elconfidencial.com/economia/2024-01-11/mapa-eficiencia-energetica-calefaccion-edificio-rehabilitacion_3796426/" target="_blank">Link</a>
+                            <button class="tools-text js__toolsText">Tools used</button>
+                        </div>
+                        <p class="toolsBox js__toolsBox">GeniusAPI and Spotify API were used in Python to extract all information. The graphics were made in Figma.</p>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
